assets/css/styles.css
/* ... */
.framework img {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 8px;
  position: absolute;
  width: 40px;
  height: 40px;
  right: 26px;
  top: 999px;
  border-radius: 8px;
  margin-right: 30px;
}

.skill {
  position: static;
  width: 327px;
  height: 72px;
  left: 0;
  top: 392.15px;
  flex: none;
  order: 2;
  flex-grow: 0;
  margin: 0 0;
}

.skill h3 {
  position: absolute;
  height: 24px;
  left: 12px;
  right: 78px;
  top: 1050px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 20px;
  line-height: 24px;
  display: flex;
  align-items: center;
  color: #000;
  margin-left: 24px;
}

.skill img {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 8px;
  position: absolute;
  width: 40px;
  top: 1050px;
  right: 26px;
  border-radius: 8px;
  margin-right: 30px;
}

.skill .underline2 {
  position: absolute;
  height: 1px;
  left: 0;
  right: 0;
  bottom: 30px;
  background: #dee1e6;
  margin-left: 24px;
  margin-right: 24px;
}

.contact {
  position: absolute;
  width: 100%;
  height: 779px;
  left: 0;
  top: 5110px;
  background: #fff;
}

.contact-form {
  width: 100%;
  height: 779px;
  left: 0;
  top: 5510px;
  background: #6070ff;
  border-top-left-radius: 70px;
  background-image: url('../images/mobile/contact-form-image.svg');
  background-repeat: no-repeat;
  background-position: right 0 top 20px;
}

.contact-form h3 {
  position: absolute;
  width: 801px;
  height: 56px;
  left: 100px;
  padding-top: 120px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
  display: flex;
  align-items: center;
  text-align: center;
  color: #fff;
}

.contact-form p {
  position: absolute;
  padding-top: 140px;
  width: 327px;
  height: 102px;
  left: 24px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 28px;
  text-align: center;
  color: #ebebff;
  margin: 20px; 
  justify-items: center; 
}

.form-content {
  width: 80%;
  position: absolute;
  text-align: center;
  top: 320px;
  margin: 0 50px;
  justify-content: center;
  height: 390px;
}

form {
  flex-flow: row wrap;
  align-items: center;
}

form input {
  vertical-align: middle;
  padding: 15px;
  background: #fff;
  border: 1px solid #cfd8dc;
  border-radius: 8px;
  width: 100%;
  margin: 10px 0;
}

form textarea {
  width: 100%;
  background: #fff;
  border: 1px solid #cfd8dc;
  border-radius: 8px;
  padding: 15px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 15px;
}

form button {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 20px 16px;
  position: absolute;
  width: 140px;
  height: 48px;
  left: 0;
  background: #fff;
  border-radius: 8px;
  bottom: 0;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 15px;
  line-height: 24px;
  display: flex;
  align-items: center;
  text-align: center;
  letter-spacing: 0.03em;
  color: #6070ff;
  border: 1px solid #cfd8dc;
}

form button:hover {
  background: #6070ff;
  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
  border-radius: 8px;
  color: #fff;
}

form button:active {
  background: #2230d2;
  border-radius: 8px;
}

.shape {
  position: absolute;
  width: 134px;
  height: 5px;
  left: calc(50% - 134px/2 - 0.5px);
  bottom: -55px;
  background: #0d151e;
  border-radius: 10px;
}

